kubernetes/apps/default/actual/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: actual
      app.kubernetes.io/name: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: actual
        app.kubernetes.io/name: actual
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-data
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual-server:23.11.0-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
